# Lumina

./: .gitignore  CODEBASE_EVALUATION.md  CODE_EVALUATION_REPORT.md  README.md  docker-compose.yml  package-lock.json  pitch.md  sui.aliases  sui.keystore
backend/: .env.backup  Dockerfile  jest.config.js  lit.env.sample  package-lock.json  package.json  seal.env.sample  sui.aliases  sui.keystore
backend/nautilus-tee/: .gitignore  Cargo.toml  Dockerfile
backend/nautilus-tee/src/: attestation.rs  biometric.rs  liveness.rs  main.rs  zk_proof.rs
backend/scripts/: check-walrus-status.ts  checkLitConnectivity.ts  checkSealConnectivity.ts  deploy-with-sdk.ts  e2eFullWorkflowTest.ts  fund-walrus-address.ts  generate-api-key.js  generate-keypair.js  get-wal-tokens.ts  install-mysql.sh  litE2eTest.ts  quick-setup.sh  sealE2eTest.ts  setup-mysql.js  test-connectivity.js  test-nft-display.ts  test-nft-minting.ts  test-timed-nft-e2e.ts  test-timed-nft-unlock.ts  verify-nft-display.ts
backend/src/: server.ts
frontend/: Dockerfile  index.html  lit.env.sample  nginx.conf  package-lock.json  package.json  vercel.json  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
move/: Move.toml  sui.aliases  sui.keystore
move/scripts/: deploy.sh
scripts/: build-and-publish-move.sh  deploy-seal-package.sh  deploy-walrus-site.ts  deploy.sh  get-sui-for-deployment.sh  update-package-id.sh
zk-circuits/: kyc_proof.circom  kyc_proof.sym  origin_proof.circom  package-lock.json  package.json  tax_proof.circom  tax_proof.sym  tax_proof_verification_key.json
(+142 files in other folders)
